Flytter logikk fra InnloggetBruker-subklassene, disse er nå rene DTOer, til Avtalepart-subklassene. Tilgangskontroll kun på skrivetilgang for alle operasjoner.
Co-authored-by: Sindre Løken <sindre.loken@nav.no>