@@ -1,19 +1,21 @@
 package no.nav.tag.tiltaksgjennomforing.autorisasjon;
 
-import no.nav.tag.tiltaksgjennomforing.*;
-import no.nav.tag.tiltaksgjennomforing.avtale.*;
+import no.nav.tag.tiltaksgjennomforing.TestData;
 import no.nav.tag.tiltaksgjennomforing.autorisasjon.veilarbabac.TilgangskontrollService;
-
+import no.nav.tag.tiltaksgjennomforing.avtale.*;
+import no.nav.tag.tiltaksgjennomforing.persondata.PersondataService;
 import org.junit.Before;
 import org.junit.Test;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.*;
 
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
-import java.util.*;
+import java.util.Collection;
+import java.util.Map;
+import java.util.Set;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.*;
 
 public class InnloggetBrukerTest {
 
@@ -22,6 +24,7 @@ public class InnloggetBrukerTest {
     private Avtale avtale;
     private BedriftNr bedriftNr;
     private TilgangskontrollService tilgangskontrollService;
+    private PersondataService persondataService;
 
     @Before
     public void setup() {
@@ -30,102 +33,82 @@ public class InnloggetBrukerTest {
         bedriftNr = new BedriftNr("12345678901");
         avtale = Avtale.veilederOppretterAvtale(new OpprettAvtale(deltaker, bedriftNr, Tiltakstype.ARBEIDSTRENING), navIdent);
         tilgangskontrollService = mock(TilgangskontrollService.class);
-    }
-
-    @Test
-    public void deltakerKnyttetTilAvtaleSkalHaDeltakerRolle() {
-        Avtale avtale = TestData.enArbeidstreningAvtale();
-        InnloggetDeltaker selvbetjeningBruker = TestData.innloggetDeltaker(TestData.enDeltaker(avtale));
-        assertThat(selvbetjeningBruker.avtalepart(avtale)).isInstanceOf(Deltaker.class);
-    }
-
-    @Test
-    public void arbeidsgiverKnyttetTilAvtaleSkalHaArbeidsgiverRolle() {
-        Avtale avtale = TestData.enArbeidstreningAvtale();
-        InnloggetArbeidsgiver selvbetjeningBruker = TestData.innloggetArbeidsgiver(TestData.enArbeidsgiver(avtale), avtale.getBedriftNr());
-        assertThat(selvbetjeningBruker.avtalepart(avtale)).isInstanceOf(Arbeidsgiver.class);
-    }
-
-    @Test
-    public void veilederKnyttetTilAvtaleSkalHaVeilederRolle() {
-        Avtale avtale = TestData.enArbeidstreningAvtale();
-        InnloggetVeileder navAnsatt = new InnloggetVeileder(avtale.getVeilederNavIdent(), tilgangskontrollService);
-        assertThat(navAnsatt.avtalepart(avtale)).isInstanceOf(Veileder.class);
+        persondataService = mock(PersondataService.class);
     }
 
     @Test
     public void harTilgang__deltaker_skal_ha_tilgang_til_avtale() {
-        assertThat(new InnloggetDeltaker(deltaker).harLeseTilgang(avtale)).isTrue();
+        assertThat(new Deltaker(deltaker).harTilgang(avtale)).isTrue();
     }
 
     @Test
     public void harTilgang__veileder_skal_ha_lesetilgang_til_avtale_hvis_toggle_er_på_og_tilgangskontroll_er_ok() {
-        InnloggetVeileder innloggetVeileder = new InnloggetVeileder(navIdent, tilgangskontrollService);
-        when(tilgangskontrollService.harLesetilgangTilKandidat(innloggetVeileder, avtale.getDeltakerFnr())).thenReturn(true);
+        Veileder veileder = new Veileder(navIdent, tilgangskontrollService, persondataService);
+        when(tilgangskontrollService.harSkrivetilgangTilKandidat(veileder.getIdentifikator(), avtale.getDeltakerFnr())).thenReturn(true);
 
-        assertThat(innloggetVeileder.harLeseTilgang(avtale)).isTrue();
-        verify(tilgangskontrollService).harLesetilgangTilKandidat(innloggetVeileder, avtale.getDeltakerFnr());
+        assertThat(veileder.harTilgang(avtale)).isTrue();
+        verify(tilgangskontrollService).harSkrivetilgangTilKandidat(veileder.getIdentifikator(), avtale.getDeltakerFnr());
     }
 
     @Test
     public void harTilgang__veileder_skal_ikke_ha_lesetilgang_til_avtale_hvis_toggle_er_på_og_tilgangskontroll_feiler() {
-        InnloggetVeileder innloggetVeileder = new InnloggetVeileder(navIdent, tilgangskontrollService);
-        when(tilgangskontrollService.harLesetilgangTilKandidat(innloggetVeileder, avtale.getDeltakerFnr())).thenReturn(false);
+        Veileder veileder = new Veileder(navIdent, tilgangskontrollService, persondataService);
+        when(tilgangskontrollService.harSkrivetilgangTilKandidat(veileder.getIdentifikator(), avtale.getDeltakerFnr())).thenReturn(false);
 
-        assertThat(innloggetVeileder.harLeseTilgang(avtale)).isFalse();
+        assertThat(veileder.harTilgang(avtale)).isFalse();
     }
 
     @Test
     public void harTilgang__veileder_skal_ha_skrivetilgang_til_avtale_hvis_toggle_er_på_og_tilgangskontroll_er_ok() {
-        InnloggetVeileder innloggetVeileder = new InnloggetVeileder(navIdent, tilgangskontrollService);
-        when(tilgangskontrollService.harSkrivetilgangTilKandidat(innloggetVeileder, avtale.getDeltakerFnr())).thenReturn(true);
+        Veileder veileder = new Veileder(navIdent, tilgangskontrollService, persondataService);
+        when(tilgangskontrollService.harSkrivetilgangTilKandidat(veileder.getIdentifikator(), avtale.getDeltakerFnr())).thenReturn(true);
 
-        assertThat(innloggetVeileder.harSkriveTilgang(avtale)).isTrue();
-        verify(tilgangskontrollService).harSkrivetilgangTilKandidat(innloggetVeileder, avtale.getDeltakerFnr());
+        assertThat(veileder.harTilgang(avtale)).isTrue();
+        verify(tilgangskontrollService).harSkrivetilgangTilKandidat(veileder.getIdentifikator(), avtale.getDeltakerFnr());
     }
 
     @Test
     public void harTilgang__veileder_skal_ikke_ha_skrivetilgang_til_avtale_hvis_toggle_er_på_og_tilgangskontroll_feiler() {
-        InnloggetVeileder innloggetVeileder = new InnloggetVeileder(navIdent, tilgangskontrollService);
-        when(tilgangskontrollService.harSkrivetilgangTilKandidat(innloggetVeileder, avtale.getDeltakerFnr())).thenReturn(false);
+        Veileder veileder = new Veileder(navIdent, tilgangskontrollService, persondataService);
+        when(tilgangskontrollService.harSkrivetilgangTilKandidat(veileder.getIdentifikator(), avtale.getDeltakerFnr())).thenReturn(false);
 
-        assertThat(innloggetVeileder.harSkriveTilgang(avtale)).isFalse();
+        assertThat(veileder.harTilgang(avtale)).isFalse();
     }
 
     @Test
     public void harTilgang__arbeidsgiver_skal_ikke_ha_tilgang_til_avtale() {
-        assertThat(new InnloggetArbeidsgiver(TestData.etFodselsnummer(), Map.of(), Collections.emptySet()).harLeseTilgang(avtale)).isFalse();
+        assertThat(new Arbeidsgiver(TestData.etFodselsnummer(), Set.of(), Map.of()).harTilgang(avtale)).isFalse();
     }
 
     @Test
     public void harTilgang__ikkepart_veileder_skal_ikke_ha_lesetilgang_hvis_toggle_er_av() {
-        assertThat(new InnloggetVeileder(new NavIdent("X123456"), tilgangskontrollService).harLeseTilgang(avtale)).isFalse();
+        assertThat(new Veileder(new NavIdent("X123456"), tilgangskontrollService, persondataService).harTilgang(avtale)).isFalse();
     }
 
     @Test
     public void harTilgang__ikkepart_veileder_skal_ikke_ha_skrivetilgang_hvis_toggle_er_av() {
-        assertThat(new InnloggetVeileder(new NavIdent("X123456"), tilgangskontrollService).harSkriveTilgang(avtale)).isFalse();
+        assertThat(new Veileder(new NavIdent("X123456"), tilgangskontrollService, persondataService).harTilgang(avtale)).isFalse();
     }
 
     @Test
     public void harTilgang__ikkepart_selvbetjeningsbruker_skal_ikke_ha_tilgang() {
-        assertThat(new InnloggetArbeidsgiver(new Fnr("00000000001"), Map.of(), Collections.emptySet()).harLeseTilgang(avtale)).isFalse();
+        assertThat(new Arbeidsgiver(new Fnr("00000000001"), Set.of(), Map.of()).harTilgang(avtale)).isFalse();
     }
 
     @Test
     public void harTilgang__arbeidsgiver_skal_kunne_representere_bedrift_uten_Fnr() {
         Map<BedriftNr, Collection<Tiltakstype>> tilganger = Map.of(this.bedriftNr, Set.of(Tiltakstype.values()));
-        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), tilganger, Collections.emptySet());
-        assertThat(innloggetArbeidsgiver.harLeseTilgang(avtale)).isTrue();
+        Arbeidsgiver Arbeidsgiver = new Arbeidsgiver(new Fnr("00000000009"), Set.of(), tilganger);
+        assertThat(Arbeidsgiver.harTilgang(avtale)).isTrue();
     }
 
     @Test
     public void harTilgang__arbeidsgiver_skal_ikke_ha_tilgang_til_avbrutt_avtale_eldre_enn_12_uker() {
         Map<BedriftNr, Collection<Tiltakstype>> tilganger = Map.of(this.bedriftNr, Set.of(Tiltakstype.values()));
-        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), tilganger, Collections.emptySet());
+        Arbeidsgiver arbeidsgiver = new Arbeidsgiver(new Fnr("00000000009"), Set.of(), tilganger);
         avtale.setAvbrutt(true);
         avtale.setSistEndret(Instant.now().minus(84, ChronoUnit.DAYS).minusMillis(100));
-        assertThat(innloggetArbeidsgiver.harLeseTilgang(avtale)).isFalse();
+        assertThat(arbeidsgiver.harTilgang(avtale)).isFalse();
     }
 
     @Test
@@ -133,8 +116,8 @@ public class InnloggetBrukerTest {
         Avtale avtale = TestData.enAvtaleMedAltUtfyltGodkjentAvVeileder();
         avtale.setSluttDato(LocalDate.now().minusDays(85));
         Map<BedriftNr, Collection<Tiltakstype>> tilganger = Map.of(avtale.getBedriftNr(), Set.of(Tiltakstype.values()));
-        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), tilganger, Collections.emptySet());
-        assertThat(innloggetArbeidsgiver.harLeseTilgang(avtale)).isFalse();
+        Arbeidsgiver Arbeidsgiver = new Arbeidsgiver(new Fnr("00000000009"), Set.of(), tilganger);
+        assertThat(Arbeidsgiver.harTilgang(avtale)).isFalse();
     }
 
     @Test
@@ -142,15 +125,15 @@ public class InnloggetBrukerTest {
         Avtale avtale = TestData.enAvtaleMedAltUtfylt();
         avtale.setSluttDato(LocalDate.now().minusDays(85));
         Map<BedriftNr, Collection<Tiltakstype>> tilganger = Map.of(avtale.getBedriftNr(), Set.of(Tiltakstype.values()));
-        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), tilganger, Collections.emptySet());
-        assertThat(innloggetArbeidsgiver.harLeseTilgang(avtale)).isTrue();
+        Arbeidsgiver Arbeidsgiver = new Arbeidsgiver(new Fnr("00000000009"), Set.of(), tilganger);
+        assertThat(Arbeidsgiver.harTilgang(avtale)).isTrue();
     }
 
     @Test
     public void harTilgang__arbeidsgiver_med_arbeidsgivertilgang_skal_ikke_ha_lonnstilskuddtilgang() {
         Avtale avtale = TestData.enLonnstilskuddAvtaleMedAltUtfylt();
         Map<BedriftNr, Collection<Tiltakstype>> tilganger = Map.of(avtale.getBedriftNr(), Set.of(Tiltakstype.ARBEIDSTRENING));
-        InnloggetArbeidsgiver innloggetArbeidsgiver = new InnloggetArbeidsgiver(new Fnr("00000000009"), tilganger, Collections.emptySet());
-        assertThat(innloggetArbeidsgiver.harLeseTilgang(avtale)).isFalse();
+        Arbeidsgiver arbeidsgiver = new Arbeidsgiver(new Fnr("00000000009"), Set.of(), tilganger);
+        assertThat(arbeidsgiver.harTilgang(avtale)).isFalse();
     }
 }
